# cmake-stm32

./: CMakeLists.txt  README.md
BSP/: .mxproject  BSP.ioc  Makefile
BSP/Core/Inc/: stm32f4xx_hal_conf.h
BSP/Core/Src/: main.c
src/: cmsis-blink.c  hal-blink.c  main.c
